# mw-libraries

./: Makefile  build.sh  fixar.c  libvers.txt  meson.build  meson_options.txt
ARM_EABI_Support/Mathlib/: meson.build  readme.txt  readme_ds_1.2_base.txt  readme_ds_1.2_sp2.txt
ARM_EABI_Support/Profiler/: NITRO_Profiler.mak  ProfileLibrary_ARM.mcp  ProfileLibrary_NITRO.mcp  meson.build
ARM_EABI_Support/Profiler/Source/: ProfilerARMIO.c  ProfilerARMLowLevel.s  ProfilerARMMemory.c  ProfilerCore.c  ProfilerIntern.h
ARM_EABI_Support/Profiler/Support/: timer.c
ARM_EABI_Support/Profiler/include/: Profiler.h
ARM_EABI_Support/Runtime/: meson.build
ARM_EABI_Support/Runtime/(RISC_Common)/: CompressedNumbers.cpp
ARM_EABI_Support/Runtime/(Runtime_Common)/: MWException.cpp  MWRuntime.h
ARM_EABI_Support/Runtime/(Runtime_Common)/MWRuntime/: CPlusLib.cpp  Destroy.cpp  MWRTTI.cpp  NewArray.cpp
ARM_EABI_Support/Runtime/(Runtime_Common)/cxxabi/: cxxabi.h  cxxabi_alloc.cpp  cxxabi_badeh.cpp  cxxabi_rtti.cpp
ARM_EABI_Support/Runtime/Runtime_ARM/(Common_Source)/: ExceptionHandlerTS.cpp  ROMCopy.c  ROMCopy.h  Thumb_interworking.c  UnwindInfo.h  __arm_eabi_init.c  abort_exit.c  aeabi_alloca.cpp  cppsemantics.cpp  cxxabi.h  derived_to_base_conversion.cpp  exceptionix.s  memclr.s  memcpy.s  memmove.s  memset.s  nitro_console_io.c  semihosted_console_io.c  semihosted_file_io.c  semihosted_support.c  startup.c  unwind_env.h  unwind_pr.c  unwinder.c  unwinder.h
ARM_EABI_Support/Runtime/Runtime_ARM/Runtime_NITRO/(Projects)/: NITRO_Runtime.mak
ARM_EABI_Support/Runtime/Runtime_ARM/Runtime_NITRO/Common_Includes/: alloca.h
ARM_EABI_Support/msl/MSL_C++/: meson.build
ARM_EABI_Support/msl/MSL_C++/MSL_ARM/Include/: mslconfig_ARM
ARM_EABI_Support/msl/MSL_C++/MSL_ARM/MSL_Precompiled_Headers/: NITRO_A_MSL.pch++
ARM_EABI_Support/msl/MSL_C++/MSL_ARM/Project/: MSL_C++.NITRO.mak  MSL_C++_Header.NITRO.mak
ARM_EABI_Support/msl/MSL_C++/MSL_Common/Include/: MSLstring.h  RefCountedPtrArray.h  algorithm  algorithm.h  array  bind  bitset  bitset.h  bitvector  cdeque  cdeque.h  char_traits  codecvt  codecvt_byname  codecvt_ext  collate  complex  ctype  ctype_byname  deque  deque.h  exception  exception.h  fstream  fstream.h  functional  functional.h  functional_ext  functional_ext.h  hash_fun  hash_fun.h  hash_map  hash_map.h  hash_set  hash_set.h  hash_table  iomanip  iomanip.h  ios  ios.h  (+76 more)
ARM_EABI_Support/msl/MSL_C++/MSL_Common/Src/: MSLstring.cpp  complex.cpp  float.cpp  ios.cpp  iostream.cpp  locale.cpp  msl_condition.cpp  msl_mutex.cpp  msl_thread.cpp  msl_time.cpp  strstream.cpp
ARM_EABI_Support/msl/MSL_C++/MSL_Precompiled_Headers/Src/: MSLHeaders++.cp  MSLHeaders++.h
ARM_EABI_Support/msl/MSL_C/MSL_Common/Include/: abort_exit.h  ansi_files.h  ansi_fp.h  ansi_parms.h  arith.h  assert.h  assert_api.h  buffer_io.h  cassert  cctype  cerrno  cfloat  char_io.h  cinttypes  ciso646  climits  clocale  cmath  complex.h  console_io.h  critical_regions.h  critical_regions.pthreads.h  csetjmp  csignal  cstdarg  cstddef  cstdint  cstdio  cstdio_tiny_IO  cstdlib  cstdlib.in  cstring  ctime  ctype.h  ctype_api.h  cwchar  cwctype  div_t.h  eof.h  errno.h  (+80 more)
ARM_EABI_Support/msl/MSL_Extras/: meson.build
ARM_EABI_Support/msl/MSL_Extras/MSL_ARM/Include/: extras.ARM.h  utime.ARM.h
ARM_EABI_Support/msl/MSL_Extras/MSL_ARM/Project/: MSL_Extras.NITRO.mak
ARM_EABI_Support/msl/MSL_Extras/MSL_Common/Include/: dirent.h  extras.h  extras_io.h  extras_malloc.h  extras_stdlib.h  extras_string.h  extras_time.h  extras_wchar.h  fcntl.h  unistd.h  unistd_api.h  unix.h  utime.h
ARM_EABI_Support/msl/MSL_Extras/MSL_Common/Src/: extras.c  old_posix.c  stat.c  stdio_posix.c
ARM_EABI_Support_DS1.2/Runtime/: meson.build
ARM_EABI_Support_DS1.2/Runtime/(Sources)/ARM_Specific_Sources/: ExceptionHandlerTS.cpp  ExceptionHandlerTS.h  Runtime_configuration.h  __NITRO_eabi_init.c  _rt_fp_status_addr.c  startup.c
ARM_EABI_Support_DS1.2/Runtime/(Sources)/Common_Sources/: NMWException.cpp
ARM_EABI_Support_DS1.2/Runtime/(Sources)/RISC_Common_Sources/: CPlusLib.cpp  CompressedNumbers.cpp  ExceptionHandler.cp  ExceptionHandler.cpp  ExceptionTables.h  NewDelete.cpp  StaticInitializers.cpp
ARM_EABI_Support_DS2.0SP2/Runtime/: meson.build
ARM_EABI_Support_DS2.0SP2/Runtime/(RISC_Common)/: ExceptionHandler.h  StaticInitializers.cpp
ARM_EABI_Support_DS2.0SP2/Runtime/(Runtime_Common)/: MWException.cpp  MWException.h
ARM_EABI_Support_DS2.0SP2/Runtime/(Runtime_Common)/cxxabi/: cxxabi.h  cxxabi_ptmf.cpp
ARM_EABI_Support_DS2.0SP2/Runtime/Runtime_ARM/(Common_Source)/: ExceptionHandlerTS.cpp  ExceptionHandlerTS.h  _rt_fp_status_addr.c  setjmp.c
ARM_EABI_Support_DS2.0SP2/msl/MSL_C/: meson.build
ARM_EABI_Support_DS2.0SP2/msl/MSL_C/MSL_ARM/Include/: PREFIX_NITRO.h  ansi_prefix.ARM.h  float.ARM.h  math.ARM.h  meson.build  stdarg.ARM.h
ARM_EABI_Support_DS2.0SP2/msl/MSL_C/MSL_ARM/Src/: abort_exit_ARM.c  critical_regions_NITRO.c  fenv_arm.c  math_ARM.c  pool_alloc.NITRO.c
ARM_EABI_Support_DS2.0SP2/msl/MSL_C/MSL_Common/Include/: ansi_parms.h  arith.h  assert_api.h  buffer_io.h  complex.h  critical_regions.h  critical_regions.pthreads.h  div_t.h  file_io.h  inttypes.h  iso646.h  limits.h  locale.h  locale_api.h  math.h  math_api.h  math_config.h  mbstring.h  misc_io.h  mslGlobals.h  msl_c_version.h  msl_cpp_std_inttypes.h  msl_cpp_std_locale.h  msl_cpp_std_signal.h  msl_cpp_std_stddef.h  msl_cpp_std_stdlib.h  msl_cpp_std_string.h  msl_secure.h  msl_t.h  msl_thread_local_data.h  pool_alloc.h  setjmp.h  signal.h  size_t.h  stdarg.h  stdbool.h  stdio.posix.h  stdio_api.h  stdlib.h  time.h  (+11 more)
ARM_EABI_Support_DS2.0SP2/msl/MSL_C/MSL_Common/Src/: ansi_files.c  arith.c  bsearch.c  critical_regions_pthreads.c  file_io.c  file_pos.c  locale.c  math_float.c  mem.c  mem_funcs.c  misc_io.c  pool_alloc.c  printf.c  qsort.c  scanf.c  strtold.c  strtoul.c  wcstoul.c  wctype.c  wfile_io.c  wmem.c  wscanf.c  wstring.c  wtime.c
ARM_EABI_Support_DS2.0SP2/msl/MSL_Extras/: meson.build
tools/: fixar.c  libver.h.in  libver.m4.in  meson.build
(+769 files in other folders)
